// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scrollbar Snapshot Tests correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Scrollbar>
    <div
      className="container orion-fusion-theme"
    >
      <DraggableCore
        allowAnyClick={false}
        cancel={null}
        disabled={false}
        enableUserSelectHack={true}
        grid={null}
        handle={null}
        offsetParent={null}
        onDrag={[Function]}
        onMouseDown={[Function]}
        onStart={[Function]}
        onStop={[Function]}
        transform={null}
      >
        <div
          className="scrollbar"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "touchAction": "none",
            }
          }
        >
          <div
            className="scrollbar-handle"
          />
        </div>
      </DraggableCore>
    </div>
  </Scrollbar>
</ThemeContextProvider>
`;

exports[`Scrollbar Snapshot Tests should render a Scrollbar with all provided props 1`] = `
<div
  className="container"
>
  <DraggableCore
    allowAnyClick={false}
    cancel={null}
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    transform={null}
  >
    <div
      className="scrollbar"
    >
      <div
        className="scrollbar-handle"
      />
    </div>
  </DraggableCore>
</div>
`;

exports[`Scrollbar Snapshot Tests should render a Scrollbar with minimal props 1`] = `
<div
  className="container"
>
  <DraggableCore
    allowAnyClick={false}
    cancel={null}
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    transform={null}
  >
    <div
      className="scrollbar"
    >
      <div
        className="scrollbar-handle"
      />
    </div>
  </DraggableCore>
</div>
`;
